--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-MYSQL_DATABASE: 'mydatabase'
-MYSQL_USER: 'user'
-MYSQL_PASSWORD: 'password'
-MYSQL_ROOT_PASSWORD: 'rootpassword'
-PORTS: "3306:3306"
+DATABASE_URL: "mysql://root:MgsccECpBjhtLvZpCfXfFDunvKpixUFy@roundhouse.proxy.rlwy.net:18023/railway"
