--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@google-cloud/storage": "^7.7.0",
     "@prisma/client": "^5.13.0",
-    "@tensorflow/tfjs-node": "^4.14.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -25,6 +25,6 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "prisma": "^5.6.0"
+    "prisma": "^5.13.0"
   }
 }
